--- a/docs/study-materials/index.mdx
+++ b/docs/study-materials/index.mdx
@@ -1,7 +1,16 @@
 ---
 slug: /
 ---
+
+<head>
+    <title>SSLC Study Materials</title>
+    <meta name="og:title" content="SSLC Study Materials" />
+    <meta name="twitter:card" content="summary" />
+</head>
+
 # Study Materials
+
+You can find the best study materials for SSLC here. Full A+ is guaranteed if you study the text book and analyze these materials.
 
 - [Previous Year Questions & Answer Keys](/pyq)
 - [Short Notes](/short-notes)
