--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,16 +1,17 @@
 ---
 slug: /
+title: "Introduction"
 ---
 
 <head>
-    <title>SSLC Study Materials</title>
-    <meta name="og:title" content="SSLC Study Materials" />
     <meta name="twitter:card" content="summary" />
 </head>
 
-# Study Materials
+# SSLC Study Materials
 
 You can find the best study materials for SSLC here. Full A+ is guaranteed if you study the text book and analyze these materials.
+
+I made this because I was annoyed from the ancient designs of the existing websites. Hope this website helps you.
 
 - [Previous Year Questions & Answer Keys](/pyq)
 - [Short Notes](/short-notes)
