separate mal & eng

--- a/blog/2025-01-10-ss-optional-chapters.mdx
+++ b/blog/2025-01-10-ss-optional-chapters.mdx
@@ -4,45 +4,76 @@ title: Social Science Weightage & Optional Chapters
 authors: [mallusrgreat]
 tags: [sslc]
 ---
-import Tabs from "@theme/Tabs"
-import TabItem from '@theme/TabItem';
 
-# Social Science Weightage & Optional Chapters
+import Tabs from "@theme/Tabs";
+import TabItem from "@theme/TabItem";
 
-Optional chapters for Social Science are finally here!
-
-You only need to study one of two optional chapters given in each point. You have to study all the required chapters.
+Optional chapters for Social Science.
 
 <Tabs>
-    <TabItem value="History" label="History" default>
+<TabItem value="English" label="English" default>
+      Optional chapters for Social Science are finally here!
+
+      You only need to study one of two optional chapters given in each point. You have to study all the required chapters.
       ## History: Required (Must Study All)
-      - Public Administration / പൊതുഭരണം - **4** marks
-      - Struggle and Freedom / സമരവും സ്വാതന്ത്ര്യവും  - **5** marks
-      - Kerala Towards Modernity / കേരളം ആധുനികതയിലേക്ക് - **4** marks
-      - Culture and Nationalism / സംസ്കാരവും ദേശീയതയും - **4** marks
-      - Sociology: What? Why? / സമൂഹശാസ്ത്രം: എന്ത്? എന്തിന്? - **3** marks
+      - Public Administration - **4** marks
+      - Struggle and Freedom  - **5** marks
+      - Kerala Towards Modernity - **4** marks
+      - Culture and Nationalism - **4** marks
+      - Sociology: What? Why? - **3** marks
 
       Total: **20** marks
       ## History: Optional (Study One Of Two)
-      - Revolutions That Influenced The World / ലോകത്തെ സ്വാധീനിച്ച വിപ്ലവങ്ങൾ | **OR** | World In The Twentieth Century / ലോകം ഇരുപതാം നൂറ്റാണ്ടിൽ - **6** marks
-      - British Exploitation and Resistance / ബ്രിട്ടീഷ് ചൂഷണവും ചെറുത്തുനിൽപ്പും | **OR** | India After Independence / സ്വാതന്ത്ര്യാനന്ദര ഇന്ത്യ - **6** marks
-      - State and Political Science / രാഷ്ട്രവും രാഷ്ട്രതന്ത്രശാസ്ത്രവും | **OR** | Civic Consciousness / പൗരബോധം - **8** marks
+      - Revolutions That Influenced The World | **OR** | World In The Twentieth Century - **6** marks
+      - British Exploitation and Resistance | **OR** | India After Independence - **6** marks
+      - State and Political Science | **OR** | Civic Consciousness - **8** marks
+
+      Total: **20** marks
+      ## Geography: Required (Must Study All)
+      - Public Expenditure and Public Revenue - **4** marks
+      - Resource Wealth of India - **5** marks
+      - India: The Land Of Diversities - **7** marks
+      - Consumer: Satisfaction and Protection - **4** marks
+
+      Total: **20** marks
+      ## Geography: Optional (Study One Of Two)
+      - Seasons and Time | **OR** | In Search Of The Source Of Wind - **8** marks
+      - Human Resource Development In India | **OR** | Financian Institutions and Services - **8** marks
+      - Eyes In The Sky And Data Analysis | **OR** | Landscape Analysis Through Maps - **4* marks
 
       Total: **20** marks
     </TabItem>
-    <TabItem value="Geography" label="Geography">
-    ## Geography: Required (Must Study All)
-    - Public Expenditure and Public Revenue / പൊതു ചെലവും പൊതുവരുമാനവും - **4** marks
-    - Resource Wealth of India / ഇന്ത്യ സാംബതിക ഭൂമിശാസ്ത്രം - **5** marks
-    - India: The Land Of Diversities / വൈവിദ്യങ്ങളുടെ ഇന്ത്യ - **7** marks
-    - Consumer: Satisfaction and Protection / ഉപഭോക്താവ്: സംതൃപ്തിയും സംരക്ഷണവും - **4** marks
+    <TabItem value="Malayalam" label="മലയാളം">
+      സോഷ്യൽ സയൻസിൻ്റെ ഓപ്ഷണൽ ചാപ്റ്ററുകൾ ഒടുവിൽ ഇതാ!
 
-    Total: **20** marks
-    ## Geography: Optional (Study One Of Two)
-    - Seasons and Time / ഋതുഭേദങ്ങളും സമയവും | **OR** | In Search Of The Source Of Wind / കാറ്റിൻ്റെ ഉറവിടം തേടി - **8** marks
-    - Human Resource Development In India / മാനവ വിഭവശേഷി വികസനം ഇന്ത്യയിൽ | **OR** | Financian Institutions and Services / ധനകാര്യ സ്ഥാപനങ്ങളും സേവനങ്ങളും - **8** marks
-    - Eyes In The Sky And Data Analysis / ആകാശക്കണക്കുകളും അറിവിൻ്റെ വിഷകലനവും | **OR** | Landscape Analysis Through Maps / ഭൂതല വിഷകലനം ഭൂപടങ്ങളിലൂടെ - **4* marks
+      ഓരോ പോയിൻ്റിലും നൽകിയിരിക്കുന്ന രണ്ട് ഓപ്ഷണൽ ചാപ്റ്ററുകളിൽ ഒന്ന് മാത്രം പഠിച്ചാൽ മതിയാകും. ആവശ്യമായ എല്ലാ ചാപ്റ്ററുകളും നിങ്ങൾ പഠിക്കേണ്ടതുണ്ട്.
+      ## ചരിത്രം: നിർബന്ധം (എല്ലാം പഠിക്കണം)
+      - പൊതുഭരണം - **4** സ്കോർ
+      - സമരവും സ്വാതന്ത്ര്യവും  - **5** സ്കോർ
+      - കേരളം ആധുനികതയിലേക്ക് - **4** സ്കോർ
+      - സംസ്കാരവും ദേശീയതയും - **4** സ്കോർ
+      - സമൂഹശാസ്ത്രം: എന്ത്? എന്തിന്? - **3** സ്കോർ
 
-    Total: **20** marks
+      ആകെ: **20** സ്കോർ
+      ## ചരിത്രം: ഇഷ്ടാനുസൃതമായ (രണ്ടിൽ ഒന്ന് പഠിക്കുക)
+      - ലോകത്തെ സ്വാധീനിച്ച വിപ്ലവങ്ങൾ | **അല്ലെങ്കിൽ** | ലോകം ഇരുപതാം നൂറ്റാണ്ടിൽ - **6** സ്കോർ
+      - ബ്രിട്ടീഷ് ചൂഷണവും ചെറുത്തുനിൽപ്പും | **അല്ലെങ്കിൽ** | സ്വാതന്ത്ര്യാനന്ദര ഇന്ത്യ - **6** സ്കോർ
+      - രാഷ്ട്രവും രാഷ്ട്രതന്ത്രശാസ്ത്രവും | **അല്ലെങ്കിൽ** | പൗരബോധം - **8** സ്കോർ
+
+      ആകെ: **20** സ്കോർ
+
+      ## ഭൂമിശാസ്ത്രം: നിർബന്ധം (എല്ലാം പഠിക്കണം)
+      - പൊതു ചെലവും പൊതുവരുമാനവും - **4** സ്കോർ
+      - ഇന്ത്യ സാംബതിക ഭൂമിശാസ്ത്രം - **5** സ്കോർ
+      - വൈവിദ്യങ്ങളുടെ ഇന്ത്യ - **7** സ്കോർ
+      - ഉപഭോക്താവ്: സംതൃപ്തിയും സംരക്ഷണവും - **4** സ്കോർ
+
+      ആകെ: **20** സ്കോർ
+      ## ഭൂമിശാസ്ത്രം: ഇഷ്ടാനുസൃതമായ (രണ്ടിൽ ഒന്ന് പഠിക്കുക)
+      - ഋതുഭേദങ്ങളും സമയവും | **അല്ലെങ്കിൽ** | / കാറ്റിൻ്റെ ഉറവിടം തേടി - **8** സ്കോർ
+      - മാനവ വിഭവശേഷി വികസനം ഇന്ത്യയിൽ | **അല്ലെങ്കിൽ** | ധനകാര്യ സ്ഥാപനങ്ങളും സേവനങ്ങളും - **8** സ്കോർ
+      - ആകാശക്കണക്കുകളും അറിവിൻ്റെ വിഷകലനവും | **അല്ലെങ്കിൽ** | ഭൂതല വിഷകലനം ഭൂപടങ്ങളിലൂടെ - **4* സ്കോർ
+
+      ആകെ: **20** സ്കോർ
     </TabItem>
 </Tabs>
