--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,6 +1,7 @@
 ---
 slug: /
 title: "Introduction"
+sidebar_position: 1
 ---
 
 <head>
@@ -15,3 +16,4 @@ I made this because I was annoyed from the ancient designs of the existing websi
 
 - [Previous Year Questions & Answer Keys](/pyq)
 - [Short Notes](/short-notes)
+- [Information Communication Technology Study Material](/it)
