--- a/blog/2025-01-10-ss-optional-chapters.mdx
+++ b/blog/2025-01-10-ss-optional-chapters.mdx
@@ -1,6 +1,6 @@
 ---
 slug: ss-weightage-and-chapters
-title: Social Science Weightage & Optional Chapters
+title: Social Science Weighage & Optional Chapters
 authors: [mallusrgreat]
 tags: [sslc]
 ---
@@ -38,7 +38,7 @@ Optional chapters for Social Science.
       Total: **20** marks
       ## Geography: Optional (Study One Of Two)
       - Seasons and Time | **OR** | In Search Of The Source Of Wind - **8** marks
-      - Human Resource Development In India | **OR** | Financian Institutions and Services - **8** marks
+      - Human Resource Development In India | **OR** | Financial Institutions and Services - **8** marks
       - Eyes In The Sky And Data Analysis | **OR** | Landscape Analysis Through Maps - **4* marks
 
       Total: **20** marks
