--- a/blog/2025-01-10-ss-optional-chapters.mdx
+++ b/blog/2025-01-10-ss-optional-chapters.mdx
@@ -1,5 +1,5 @@
 ---
-slug: ss-weightage-and-chapters
+slug: ss-weighage-and-chapters
 title: Social Science Weighage & Optional Chapters
 authors: [mallusrgreat]
 tags: [sslc]
@@ -8,7 +8,7 @@ tags: [sslc]
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-Optional chapters for Social Science.
+Optional chapters and weighage of each chapters for Social Science.
 
 <Tabs>
 <TabItem value="English" label="English" default>
