--- a/docs/it.mdx
+++ b/docs/it.mdx
@@ -10,8 +10,21 @@ import TabItem from "@theme/TabItem";
 
 ICT or IT is to be given important the same as you do for other subjects. They're one of the ten subjects you have to get an A+ for. Here are some materials to help you achieve exactly that.
 
+# Resources
+- [Exam Files](https://drive.google.com/file/d/1BcCwl0Or0aE5Hhq26rB1jWeIHHDOL2r6/view?usp=drive_link)
+## Softwares
+All software linked here are free to use and/or modify for non-commercial usage.
+- [Inkscape](https://wiki.inkscape.org/wiki/Installing_Inkscape) for **The World of Designing**
+- [LibreOffice](https://www.libreoffice.org/download/download-libreoffice/) for **Publishing**, **Database - An Introduction**
+- [Sunclock](https://directory.fsf.org/wiki/Sunclock) for **Map Reading** (can be a little tricky to install if you don't know how to use commands in Ubuntu)
+- [QGIS](https://www.qgis.org/download/) for **Map Reading**
+- [Python](https://www.python.org/downloads/) for **Python Graphics** (Recommended to use [Geany](https://www.geany.org/download/releases/) for a lightweight IDE, or you can continue using notepad or gedit)
+- [Synfig Studio](http://www.synfig.org/download-stable/)
+
+
 <Tabs>
   <TabItem value="English" label="English">
+
     ## Practical
 
     - [All Chapters Practical Worksheets by Rasheed Odakkal](https://www.educationobserver.com/forum/attachment.php?aid=28820)
