--- a/docs/it.mdx
+++ b/docs/it.mdx
@@ -19,7 +19,7 @@ All software linked here are free to use and/or modify for non-commercial usage.
 - [Sunclock](https://directory.fsf.org/wiki/Sunclock) for **Map Reading** (can be a little tricky to install if you don't know how to use commands in Ubuntu)
 - [QGIS](https://www.qgis.org/download/) for **Map Reading**
 - [Python](https://www.python.org/downloads/) for **Python Graphics** (Recommended to use [Geany](https://www.geany.org/download/releases/) for a lightweight IDE, or you can continue using notepad or gedit)
-- [Synfig Studio](http://www.synfig.org/download-stable/)
+- [Synfig Studio](http://www.synfig.org/download-stable/) for **Moving Images**
 
 
 <Tabs>
