--- a/docs/it.mdx
+++ b/docs/it.mdx
@@ -12,6 +12,8 @@ ICT or IT is to be given important the same as you do for other subjects. They'r
 
 # Resources
 - [Exam Files](https://drive.google.com/file/d/1BcCwl0Or0aE5Hhq26rB1jWeIHHDOL2r6/view?usp=drive_link)
+- IT@School Edubuntu (for more experienced users who can install OSes): [18.04](https://kite.kerala.gov.in/KITE/downloads/IT_School_GNU-Linux_18041-64bit.iso), [20.04](https://kite.kerala.gov.in/KITE/downloads/KITE_GNU-Linux_20_04_1-3.iso), [22.04](https://sahitham.kite.kerala.gov.in/assets/downloads/os/KITE-GNU-Linux-22.04.4-2-amd64.iso)
+- [Other downloads from Samagra for their Edubuntu version](https://kite.kerala.gov.in/KITE/index.php/welcome/downloads)
 ## Softwares
 All software linked here are free to use and/or modify for non-commercial usage.
 - [Inkscape](https://wiki.inkscape.org/wiki/Installing_Inkscape) for **The World of Designing**
